# kando

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json
.github/workflows/: release-tauri-app.yaml
dnas/kando/workdir/: dna.yaml
dnas/kando/zomes/coordinator/profiles/: Cargo.toml
dnas/kando/zomes/coordinator/syn/: Cargo.toml
dnas/kando/zomes/integrity/profiles/: Cargo.toml
dnas/kando/zomes/integrity/syn/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: index.html  package.json  tsconfig.json  vite.config.ts  we-applet-vite.config.ts
ui/applet/: index.html
ui/public/: global.css
ui/src/: AboutDialog.svelte  App.svelte  AttachmentsBind.svelte  AttachmentsDialog.svelte  AttachmentsList.svelte  Avatar.svelte  AvatarDialog.svelte  AvatarIcon.svelte  BoardEditor.svelte  BoardMenu.svelte  BoardMenuItem.svelte  CardDetails.svelte  CardDetailsDrawer.svelte  CardEditor.svelte  ClickEdit.svelte  CloneManagerCreateDialog.svelte  CloneManagerDialog.svelte  CloneManagerJoinDialog.svelte  CloneManagerShareDialog.svelte  CommitItem.svelte  Controller.svelte  ControllerBlockActiveBoards.svelte  ControllerBoard.svelte  ControllerCard.svelte  ControllerCreate.svelte  DisableForOs.svelte  EditBoardDialog.svelte  ExternalLink.svelte  FeedElement.svelte  FeedbackItems.svelte  FeedbackPane.svelte  Folk.svelte  GroupParticipants.svelte  JoinCloneDialog.svelte  KanDoPane.svelte  LabelSelector.svelte  NewBoardDialog.svelte  NewCloneDialog.svelte  Participants.svelte  ParticipantsDialog.svelte  (+18 more)
ui/src/icons/: KDLogoIcon.svelte
ui/src/stores/: cloneManager.ts  kando.ts
ui/src/utils/: dnaJoiningInfo.ts  util.ts
we_dev/: config.json  config.ts  tool-library.ts
workdir/: happ.yaml  web-happ.yaml
