[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.2.4"
hdk = "=0.1.4"
serde = "1"

[workspace.dependencies.kando]
path = "dnas/kando/zomes/coordinator/kando"

[workspace.dependencies.kando_integrity]
path = "dnas/kando/zomes/integrity/kando"

[workspace.dependencies.profiles]
path = "dnas/kando/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/kando/zomes/integrity/profiles"

[workspace.dependencies.file_storage]
path = "dnas/kando/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/kando/zomes/integrity/file_storage"
