[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
exclude = ["src-tauri"]
resolver = "2"

[workspace.dependencies]
hdi = "0.5.0"
hdk = "0.4.0"
serde = "1"

[workspace.dependencies.file_storage]
path = "dnas/kando/zomes/coordinator/file_storage"

[workspace.dependencies.file_storage_integrity]
path = "dnas/kando/zomes/integrity/file_storage"

[workspace.dependencies.kando]
path = "dnas/kando/zomes/coordinator/kando"

[workspace.dependencies.kando_integrity]
path = "dnas/kando/zomes/integrity/kando"

[workspace.dependencies.profiles]
path = "dnas/kando/zomes/coordinator/profiles"

[workspace.dependencies.profiles_integrity]
path = "dnas/kando/zomes/integrity/profiles"
